fix: proper setup

--- a/versionStream/src/base/namespaces/jx/lighthouse-config/blank-scheduler.yaml
+++ b/versionStream/src/base/namespaces/jx/lighthouse-config/blank-scheduler.yaml
@@ -40,8 +40,10 @@ spec:
       - override
   policy:
     protectTested: true
-  postsubmits: []
-  presubmits: []
+  postsubmits:
+    entries: []
+  presubmits:
+    entries: []
   schedulerAgent:
     agent: tekton
   trigger:
