--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -55,6 +55,7 @@ releases:
   namespace: jx
   values:
   - versionStream/charts/jenkins-x/lighthouse/values.yaml.gotmpl
+  - charts/jenkins-x/lighthouse/values.yaml.gotmpl
 - chart: jenkins-x/nexus
   version: 0.1.35
   name: nexus
