--- a/.jx/secret/mapping/secret-mappings.yaml
+++ b/.jx/secret/mapping/secret-mappings.yaml
@@ -42,6 +42,19 @@ spec:
     - key: jx-pipeline-user
       name: password
       property: token
+    name: tekton-git
+  - backendType: gcpSecretsManager
+    gcpSecretsManager:
+      projectId: jenkins-x-labs-bdd
+      uniquePrefix: jstrachan-catalog
+      version: latest
+    mappings:
+    - key: jx-pipeline-user
+      name: username
+      property: username
+    - key: jx-pipeline-user
+      name: password
+      property: token
     name: jx-pipeline-git-github-github
   - backendType: gcpSecretsManager
     gcpSecretsManager:
