--- a/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
+++ b/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
@@ -258,5 +258,68 @@ spec:
 
         {{- end }}
         }
+  - name: tekton-git
+    mandatory: true
+    properties:
+    - name: username
+      key: secret/data/jx/pipelineUser
+      question: the pipeline username
+      help: the user name used by pipelines running in Jenkins X
+      generator: gitOperator.username
+    - name: password
+      key: secret/data/jx/pipelineUser
+      question: the pipeline token or password
+      help: the token or password used by pipelines running in Jenkins X
+      generator: gitOperator.password
+  - name: tekton-container-registry-auth
+    mandatory: true
+    properties:
+    - name: .dockerconfigjson
+      question: Docker JSON Configuration
+      help: This is the docker JSON configuration for authenticating with container
+        registries
+      template: |-
+        {
+        {{- if eq .Requirements.cluster.provider "gke" }}
+
+          "credHelpers": {
+              "gcr.io": "gcr",
+              "us.gcr.io": "gcr",
+              "eu.gcr.io": "gcr",
+              "asia.gcr.io": "gcr",
+              "staging-k8s.gcr.io": "gcr"
+          },
+
+        {{- else if eq .Requirements.cluster.provider "eks" }}
+
+          "credHelpers": {
+            "{{ .Requirements.cluster.registry }}": "ecr-login"
+          },
+
+        {{- else if eq .Requirements.cluster.provider "aws" }}
+
+          "credsStore": "ecr-login",
+
+        {{- else if eq .Requirements.cluster.provider "aks" }}
+
+          "credsStore": "acr",
+
+        {{- end }}
+
+          "auths":{
+          {{- if secret "container-registry-auth" "password" }}
+            {{ secret "container-registry-auth" "url" | default "https://index.docker.io/v1/" | quote }}: {
+                "auth": {{ auth "container-registry-auth" "username" "password" | b64enc | quote}},
+                "email": {{ secret "container-registry-auth" "email" | default "jenkins-x@googlegroups.com" | quote }}
+            },
+          {{- end }}
+            "ghcr.io": {
+              {{- if secret "jx-boot" "email" }}
+                "email": {{ secret "jx-boot" "email" | quote }},
+              {{- end }}
+                "auth": {{ auth "jx-boot" "username" "password" | b64enc | quote}}
+            }
+          }
+        }
 
 
