fix: import and add scheduler

--- a/versionStream/src/base/namespaces/jx/source-repositories/meta-pipeline-scheduler.yaml
+++ b/versionStream/src/base/namespaces/jx/source-repositories/meta-pipeline-scheduler.yaml
@@ -3,6 +3,7 @@ kind: Scheduler
 metadata:
   creationTimestamp: null
   name: jx-meta-pipeline
+  namespace: jx
 spec:
   approve:
     issueRequired: false
