--- a/jx-requirements.yml
+++ b/jx-requirements.yml
@@ -40,6 +40,7 @@ environments:
       enabled: false
       production: false
   key: staging
+  promotionStrategy: Auto
 - ingress:
     domain: ""
     externalDNS: false
@@ -49,6 +50,7 @@ environments:
       enabled: false
       production: false
   key: production
+  promotionStrategy: Auto
 gitops: true
 ingress:
   domain: 34.66.77.190.nip.io
