--- a/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/.lighthouse/jenkins-x/pullrequest.yaml
@@ -20,7 +20,7 @@ spec:
       type: string
     - default: master
       description: git revision to checkout (branch, tag, sha, ref…)
-      name: revision
+      name: PULL_PULL_SHA
       type: string
     - default: source
       description: subdirectory inside of /workspace to clone the git repo
@@ -33,8 +33,8 @@ spec:
         value: $(params.PULL_NUMBER)
       - name: REPO_URL
         value: $(params.REPO_URL)
-      - name: revision
-        value: $(params.revision)
+      - name: PULL_PULL_SHA
+        value: $(params.PULL_PULL_SHA)
       - name: subdirectory
         value: $(params.subdirectory)
       resources: {}
@@ -48,7 +48,7 @@ spec:
           type: string
         - default: master
           description: git revision to checkout (branch, tag, sha, ref…)
-          name: revision
+          name: PULL_PULL_SHA
           type: string
         - default: source
           description: subdirectory inside of /workspace to clone the git repo
@@ -60,6 +60,8 @@ spec:
             value: $(params.PULL_NUMBER)
           - name: REPO_URL
             value: $(params.REPO_URL)
+          - name: PULL_PULL_SHA
+            value: $(params.PULL_PULL_SHA)
           - name: PIPELINE_KIND
             value: pullrequest
           - name: JX_BATCH_MODE
@@ -79,7 +81,7 @@ spec:
         steps:
         - args:
           - -c
-          - 'mkdir -p $HOME; git config --global --add user.name $GIT_AUTHOR_NAME; git config --global --add user.email $GIT_AUTHOR_EMAIL; git config --global credential.helper store; git clone $(inputs.params.REPO_URL) $(inputs.params.subdirectory); echo cloned url: $(inputs.params.REPO_URL) to dir: $(inputs.params.subdirectory); cd $(inputs.params.subdirectory); git checkout $(inputs.params.revision); echo checked out revision: $(inputs.params.revision) to dir: $(inputs.params.subdirectory)'
+          - 'mkdir -p $HOME; git config --global --add user.name $GIT_AUTHOR_NAME; git config --global --add user.email $GIT_AUTHOR_EMAIL; git config --global credential.helper store; git clone $(inputs.params.REPO_URL) $(inputs.params.subdirectory); echo cloned url: $(inputs.params.REPO_URL) to dir: $(inputs.params.subdirectory); cd $(inputs.params.subdirectory); git checkout $(inputs.params.PULL_PULL_SHA); echo checked out PULL_PULL_SHA: $(inputs.params.PULL_PULL_SHA) to dir: $(inputs.params.subdirectory)'
           command:
           - /bin/sh
           image: gcr.io/jenkinsxio/builder-jx:2.1.32-662
