update versionStream (https://github.com/jenkins-x/jxr-versions) from master (1964806d71f74ad3ef4c157414b1126897f4dca0) to master (86e0be025ca75a7f416ba56e28a6d479518895bb)

--- a/versionStream/schedulers/default.yaml
+++ b/versionStream/schedulers/default.yaml
@@ -46,7 +46,8 @@ spec:
           - master
         cluster: ""
         context: ""
-        labels: { }
+        labels:
+          aadpodidbinding: tekton-bot
         max_concurrency: 0
         name: release
         report: false
@@ -59,7 +60,8 @@ spec:
         branches: [ ]
         cluster: ""
         context: pr-build
-        labels: { }
+        labels:
+          aadpodidbinding: tekton-bot
         max_concurrency: 0
         merge_method: ""
         name: pr-build
