fix: polish the PR pipeline

--- a/versionStream/schedulers/jx-meta-pipeline.yaml
+++ b/versionStream/schedulers/jx-meta-pipeline.yaml
@@ -296,7 +296,6 @@ spec:
                       path: labels
                   name: podinfo
 
-
   presubmits:
     entries:
       - agent: tekton-pipeline
@@ -383,7 +382,6 @@ spec:
                 value: $(params.REPO_OWNER)
               - name: REPO_URL
                 value: $(params.REPO_URL)
-              resources: {}
               taskSpec:
                 params:
                 - description: git url to clone
@@ -461,6 +459,8 @@ spec:
                     value: $(params.REPO_OWNER)
                   - name: REPO_URL
                     value: $(params.REPO_URL)
+                  - name: XDG_CONFIG_HOME
+                    value: /tekton/home
                   name: ""
                   resources:
                     requests:
@@ -484,6 +484,14 @@ spec:
                   resources: {}
                   workingDir: /workspace
                 - args:
+                  - '[ -d /builder/home ] || mkdir -p /builder && ln -s /tekton/home /builder/home'
+                  command:
+                  - /bin/sh
+                  - -c
+                  image: gcr.io/jenkinsxio/builder-jx:2.1.142-761
+                  name: setup-builder-home
+                  resources: {}
+                - args:
                   - gitops
                   - git
                   - setup
@@ -495,14 +503,6 @@ spec:
                   name: git-setup
                   resources: {}
                   workingDir: /workspace
-                - args:
-                  - '[ -d /builder/home ] || mkdir -p /builder && ln -s /tekton/home /builder/home'
-                  command:
-                  - /bin/sh
-                  - -c
-                  image: gcr.io/jenkinsxio/builder-jx:2.1.142-761
-                  name: setup-builder-home
-                  resources: {}
                 - args:
                   - step
                   - git
@@ -536,7 +536,7 @@ spec:
                   name: create-effective-pipeline
                   resources: {}
                 - args:
-                  - "source .jx/variables.sh && jx step create task --clone-dir /workspace/source --kind ${JOB_TYPE} --pr-number ${PULL_NUMBER} --service-account tekton-bot --source source --branch ${BRANCH_NAME} --build-number 1 --context ${JOB_NAME}"
+                  - "source .jx/variables.sh && jx step create task --clone-dir /workspace/source --kind ${PIPELINE_KIND} --pr-number ${PULL_NUMBER} --service-account tekton-bot --source source --branch ${BRANCH_NAME} --build-number 1 --context ${JOB_NAME}"
                   command:
                   - /bin/sh
                   - -c
@@ -552,7 +552,6 @@ spec:
                         fieldPath: metadata.labels
                       path: labels
                   name: podinfo
-
         queries:
           - excludedBranches: { }
             included_branches: { }
