--- a/versionStream/schedulers/default.yaml
+++ b/versionStream/schedulers/default.yaml
@@ -66,45 +66,45 @@ spec:
         merge_method: ""
         name: pr-build
         optional: false
-        policy:
-          required_status_checks:
-            contexts:
-              entries:
-                - pr-build
-        queries:
-          - excludedBranches: { }
-            included_branches: { }
-            labels:
-              entries:
-                - approved
-            milestone: ""
-            missingLabels:
-              entries:
-                - do-not-merge
-                - do-not-merge/hold
-                - do-not-merge/work-in-progress
-                - needs-ok-to-test
-                - needs-rebase
-            review_approved_required: false
-          - excludedBranches: { }
-            included_branches: { }
-            labels:
-              entries:
-                - updatebot
-            milestone: ""
-            missingLabels:
-              entries:
-                - do-not-merge
-                - do-not-merge/hold
-                - do-not-merge/work-in-progress
-                - needs-ok-to-test
-                - needs-rebase
-            review_approved_required: false
         report: true
         rerun_command: /test this
         run_if_changed: ""
         skip_branches: [ ]
         trigger: (?m)^/test( all| this),?(\s+|$)
+  protection_policy:
+    required_status_checks:
+      contexts:
+        entries:
+          - pr-build
+  queries:
+    - excludedBranches: { }
+      included_branches: { }
+      labels:
+        entries:
+          - approved
+      milestone: ""
+      missingLabels:
+        entries:
+          - do-not-merge
+          - do-not-merge/hold
+          - do-not-merge/work-in-progress
+          - needs-ok-to-test
+          - needs-rebase
+      review_approved_required: false
+    - excludedBranches: { }
+      included_branches: { }
+      labels:
+        entries:
+          - updatebot
+      milestone: ""
+      missingLabels:
+        entries:
+          - do-not-merge
+          - do-not-merge/hold
+          - do-not-merge/work-in-progress
+          - needs-ok-to-test
+          - needs-rebase
+      review_approved_required: false
   schedulerAgent:
     agent: tekton
   trigger:
