fix: import repository

--- a/.jx/gitops/source-config.yaml
+++ b/.jx/gitops/source-config.yaml
@@ -18,3 +18,5 @@ spec:
       scheduler: jx-meta-pipeline
     - name: nodey531
       scheduler: in-repo
+    - name: nodey532
+      scheduler: in-repo
