--- a/versionStream/schedulers/default.yaml
+++ b/versionStream/schedulers/default.yaml
@@ -44,6 +44,7 @@ spec:
       - agent: tekton
         branches:
           - master
+          - main
         cluster: ""
         context: ""
         labels:
