--- a/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
+++ b/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
@@ -2,6 +2,26 @@ apiVersion: secret.jenkins-x.io/v1alpha1
 kind: Schema
 spec:
   objects:
+  - name: jx-basic-auth-user-password
+    mandatory: true
+    properties:
+    - name: username
+      question: the username for basic auth ingresses
+      help: The username to login to basic authenticated URLs
+      defaultValue: admin
+    - name: password
+      question: the password for basic auth ingresses
+      help: The password to login to basic authenticated URLs
+      minLength: 5
+      maxLength: 41
+      generator: password
+  - name: jx-basic-auth
+    mandatory: true
+    properties:
+    - name: auth
+      question: the htpasswd format basic auth for Ingress
+      help: The htpassord encoded user and password for basic auth ingresses
+      template: {{ htpasswd (secret "jx-basic-auth-user-password" "username") (jx-basic-auth-user-password "nexus" "password") | quote }}
   - name: jx-pipeline-git-github-github
     mandatory: true
     properties:
