fix: upgrade mappings

--- a/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
+++ b/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
@@ -15,7 +15,7 @@ spec:
       minLength: 5
       maxLength: 41
       generator: password
-  - name: jx-basic-auth
+  - name: jx-basic-auth-htpasswd
     mandatory: true
     properties:
     - name: auth
