--- a/.jx/secret/mapping/secret-mappings.yaml
+++ b/.jx/secret/mapping/secret-mappings.yaml
@@ -16,6 +16,29 @@ spec:
       uniquePrefix: jstrachan-catalog
       version: latest
     mappings:
+    - key: jx-basic-auth-user
+      name: username
+      property: username
+    - key: jx-basic-auth-user
+      name: password
+      property: password
+    name: jx-basic-auth-user-password
+  - backendType: gcpSecretsManager
+    gcpSecretsManager:
+      projectId: jenkins-x-labs-bdd
+      uniquePrefix: jstrachan-catalog
+      version: latest
+    mappings:
+    - key: jx-basic-auth-htpasswd
+      name: auth
+      property: auth
+    name: jx-basic-auth-htpasswd
+  - backendType: gcpSecretsManager
+    gcpSecretsManager:
+      projectId: jenkins-x-labs-bdd
+      uniquePrefix: jstrachan-catalog
+      version: latest
+    mappings:
     - key: lighthouse-hmac
       name: hmac
       property: token
