--- a/versionStream/schedulers/environment.yaml
+++ b/versionStream/schedulers/environment.yaml
@@ -19,7 +19,7 @@ spec:
       skip-unknown-contexts: false
     pr_status_base_url: ""
     squash_label: ""
-    target_url: http://deck-jx.{{ .Requirements.ingress.namespaceSubDomain }}{{ .Requirements.ingress.domain }}
+    target_url: http://dashboard{{ .Requirements.ingress.namespaceSubDomain }}{{ .Requirements.ingress.domain }}
   plugins:
     entries:
       - config-updater
