fix: upgrade secret mapping and jxboot version

--- a/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
+++ b/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
@@ -21,7 +21,8 @@ spec:
     - name: auth
       question: the htpasswd format basic auth for Ingress
       help: The htpassord encoded user and password for basic auth ingresses
-      template: {{ htpasswd (secret "jx-basic-auth-user-password" "username") (jx-basic-auth-user-password "nexus" "password") | quote }}
+      template: |-
+        {{ htpasswd (secret "jx-basic-auth-user-password" "username") (jx-basic-auth-user-password "nexus" "password") }}
   - name: jx-pipeline-git-github-github
     mandatory: true
     properties:
