--- a/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
+++ b/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
@@ -20,9 +20,9 @@ spec:
     properties:
     - name: auth
       question: the htpasswd format basic auth for Ingress
-      help: The htpassord encoded user and password for basic auth ingresses
+      help: The htpasswd encoded user and password for basic auth ingresses
       template: |-
-        {{ htpasswd (secret "jx-basic-auth-user-password" "username") (jx-basic-auth-user-password "nexus" "password") }}
+        {{ htpasswdSecret "jx-basic-auth-user-password" "username" "password" }}
   - name: jx-pipeline-git-github-github
     mandatory: true
     properties:
