--- a/.jx/secret/mapping/secret-mappings.yaml
+++ b/.jx/secret/mapping/secret-mappings.yaml
@@ -39,6 +39,21 @@ spec:
       uniquePrefix: jstrachan-catalog
       version: latest
     mappings:
+    - key: jx-basic-auth-user
+      name: username
+      property: username
+    - key: jx-basic-auth-user
+      name: password
+      property: password
+    name: jx-basic-auth-user-password
+  - backendType: gcpSecretsManager
+    mappings:
+    - key: jx-basic-auth-htpasswd
+      name: auth
+      property: auth
+    name: jx-basic-auth-htpasswd
+  - backendType: gcpSecretsManager
+    mappings:
     - key: lighthouse-hmac
       name: hmac
       property: token
